--- a/recipe_folder/svc.yaml
+++ b/recipe_folder/svc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nutrition-svc
+  name: recipe-svc
 spec:
   selector:
-    app: nutrition
+    app: recipe
   ports:
-  - name: nutrition
-    port: 5003
+  - name: recipe
+    port: 5008
     protocol: TCP
-    nodePort: 30003
+    nodePort: 30008
   type: NodePort
